--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container"></div>
     <header class="header_area d-flex flex-wrap justify-content-center py-3 mb-4 ">
       <nav class="navbar navbar-expand-sm navbar-dark">
-          <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+          <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
             <img src="src/LOGO WHITE_1721043934.webp" width="200" height ="auto" alt="skBOMA Logo">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
@@ -79,14 +79,15 @@
         </button>
       </div>
 
-      <div class="row container pb-5 px-5" id="About">
-        <h1 class="py-1 text-white">skBOMA Firepits.</h1>
+      <div class="row container pb-5 px-5 " id="About">
+        <h1 class="py-1 underlinered text-white">skBOMA Firepits.</h1>
           <p class="text-white">At skBoma Firepits, we specialize in crafting durable, portable, and stylish fire solutions that enhance any space or adventure. Inspired by the essence of social gatherings and the beauty of the outdoors, our firepits are built with precision and care using high-quality carbon steel.</p>
           <p class="text-white">Designed by Sebastian Kirkland, a renowned industrial designer and Co-founder of User Design International, these firepits reflect a perfect blend of innovation and craftsmanship. With over 25 years of expertise in design and manufacturing, Sebastian has collaborated with some of South Africa's leading interior and architectural design houses. His achievements include winning the 2010 Design Indaba Best Product Award and securing a major contract with SAB as a Creative Director for Point of Sale. Additionally, his designs have been internationally patented, showcasing his commitment to excellence and innovation.</p>        
           <p class="text-white">This larger-than-most fire pit on the market has the unique ability to flat pack for mobility while still remaining aesthetically pure to form, making it ideal for camping, braais, or relaxing evenings under the stars. Whether you're creating warmth at home or on the go, skBOMA Firepits deliver functionality, durability, and timeless style to every occasion.</p>
       </div>
 <!--Bootstrap 5 Featurette-->
-      <div class="row featurette px-5">
+<div class = " bg-alt">
+      <div class="row featurette px-5 py-5">
         <div class="col-md-7 order-md-2 align-items-center">
           <h1 class="py-1 text-white">Adventure-Ready Warmth.</h1>
           <p>Discover the versatility of skBOMA fireplaces—designed for any setting, from your backyard to the great outdoors.</p>
@@ -107,58 +108,64 @@
         <div class="col-md-5">
           <img src ="src/HOUSE2.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">        </div>
       </div>
+    </div>
 
 <!--Products offering-->
-      <div class="container px-4 py-3" id="Products">
-        <h2 class="pb-2 border-bottom text-white">Products</h2>
+      <div class="container px-4 py-5" id="Products">
+        <h2 class="pb-2 underlinered text-white">Products</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
           <div class="col d-flex align-items-start">
             <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
             </div>
             <div>
-              <h3 class="text-white">skBOMA  Pit Only</h3>
-              <img src ="src/5.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300">
-              <p>Enquire at <a href="mailto:info@skboma.com">info@skboma.com</a> to purchase the skBOMA on its own.</p>
+              <h3 class="text-white d-flex justify-content-center">skBOMA  Pit Only</h3>
+              <img src ="src/5.jpg" class="d-flex justify-content-center bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300">
+              <p class="text-white textcenter py-2">Enquire at <a href="mailto:info@skboma.com">info@skboma.com</a> to purchase the skBOMA on its own.</p>
             </div>
           </div>
-          <div class="col d-flex align-items-start text-white">
+          <div class="col d-flex justify-content-center text-white">
             <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
             </div>
             <div>
-              <h3 class="text-white">skBOMA  Pit And Grill</h3>
-              <img src ="src/8.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300">
-              <p>Enquire at <a href="mailto:info@skboma.com">info@skboma.com</a> to purchase the skBOMA & Grill Combo.</p>
+              <h3 class="text-white d-flex justify-content-center">skBOMA  Pit And Grill</h3>
+              <img src ="src/8.jpg" class="d-flex justify-content-center  bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300">
+              <p class="text-white textcenter py-2">Enquire at <a href="mailto:info@skboma.com">info@skboma.com</a> to purchase the skBOMA & Grill Combo.</p>
             </div>
           </div>
           <div class="col d-flex align-items-start">
             <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
             </div>
             <div>
-              <h3 class="text-white">Grill Only</h3>
-              <img src ="src/grill2.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300">
-              <p>Enquire at <a href="mailto:info@skboma.com">info@skboma.com</a>to purchase the Grill on its own.</p>
+              <h3 class="text-white d-flex justify-content-center">Grill Only</h3>
+              <img src ="src/grill2.jpg" class="d-flex justify-content-center bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300">
+              <p class="text-white textcenter py-2">Enquire at <a href="mailto:info@skboma.com">info@skboma.com</a>to purchase the Grill on its own.</p>
             </div>
           </div>
         </div>
       </div>
 <!--Contact information-->
-      <div class="row featurette px-5">
-        <div class="col-md-7 align-items-center">
-          <h2 class="py-5 text-white">Contact us!</h2>
-          <p>We would love to hear from you whether it's an enquiry, issue to raise or even just to let us know your experience with our product.</p>
-          <p><a href="info@skboma.com" class ="text-white">Send email</a></p>
-        </div>
-        <div class="col-md-5 footer-logo">
-          <img src ="src/LOGOWHITE2.png" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="350" height="350">        </div>
-      </div>
-      </main>
-<!--Footer-->
-      <footer class="container mt-auto text-white-50" id="Contact">
-        <p>© skBOMA  2025. All Rights Reserved.</p>
-        <small>Website designed and crafted with care by Two Waves Multimedia. Unauthorized duplication or distribution is prohibited.</small>
-      </footer>
+<div class = "bg-alt py-5">
+  <div class="row featurette px-5">
+    <div class="col-md-7 align-items-center">
+      <h2 class="underlinered text-white">Contact us!</h2>
+      <p class = "py-3">We would love to hear from you whether it's an enquiry, issue to raise or even just to let us know your experience with our product.</p>
+      <p><a href="info@skboma.com" class ="text-white">Send email</a></p>
     </div>
+    <div class="col-md-5 footer-logo">
+      <img src ="src/LOGOWHITE2.png" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="200" height="200">        </div>
+    </div>
+
+<!--Footer-->
+<footer class="container mt-auto text-white-50" id="Contact">
+  <p>© skBOMA  2025. All Rights Reserved.</p>
+  <small>Website designed and crafted with care by Two Waves Multimedia. Unauthorized duplication or distribution is prohibited.</small>
+</footer>
+  </div>
+</div>
+</main>
+
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    </div>  
+
 </body>
 </html>
